[tool.poetry]
name = "delfino"
version = "0.13.1"
description = "A collection of command line helper scripts wrapping tools used during Python development."
authors = ["Radek Lát <radek.lat@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/radeklat/delfino"

[tool.poetry.scripts]
delfino = "delfino.main:main"
mike = "delfino.main:main"

[tool.poetry.dependencies]
python = "^3.7.0"
toml = "^0.10.2"
click = "^8.0.3"
pydantic = "^1.8.2"
importlib-metadata = {version = "*", python = "<3.8"}
black = {version = "*", optional = true}
isort = {version = "*", optional = true}
pre-commit = {version = "*", optional = true}
pytest = {version = "*", optional = true}
coverage = {version = "*", optional = true}
pytest-cov = {version = "*", optional = true}
mypy = {version = "*", optional = true}
pylint = {version = "*", optional = true}
pycodestyle = {version = "*", optional = true}
pydocstyle = {version = "*", optional = true}
twine = {version = "*", optional = true}
shellingham = {version = "*", optional = true}


[tool.poetry.dev-dependencies]
black = "^21.9b0"
isort = "^5.9.3"
coverage = "^6.0.2"
pylint = "^2.11.1"
mypy = "^0.910"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
pytest-dotenv = "^0.5.2"
pytest-mock = "^3.6.1"
pre-commit = "^2.15.0"
pycodestyle = "^2.8.0"
pydocstyle = "^6.1.1"
shellingham = "^1.4.0"
types-termcolor = "*"
types-toml = "*"

[tool.poetry.extras]
all = ["black", "isort", "pre-commit", "pytest", "coverage", "pytest-cov", "mypy", "pylint", "pycodestyle", "pydocstyle", "twine", "packaging", "shellingham"]
verify_all = ["black", "isort", "pre-commit", "pytest", "coverage", "pytest-cov", "mypy", "pylint", "pycodestyle", "pydocstyle"]
format = ["black", "isort", "pre-commit"]
test = ["pytest", "coverage", "pytest-cov"]
typecheck = ["mypy"]
lint = ["pylint", "pycodestyle", "pydocstyle"]
upload_to_pypi = ["twine"]
build_docker = ["packaging"]
completion = ["shellingham"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# Setting compatible with black. See https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = "tests/unit tests/integration"
python_functions = "should_*"
junit_family = "xunit2"
# pytest-dotenv settings
env_override_existing_values = 1
env_files = ".env.test"

# Structure: https://docs.pytest.org/en/stable/warnings.html
# Values:    https://docs.python.org/3/library/warnings.html#describing-warning-filters
#            action:message:category:module:line
filterwarnings = [
    "ignore:'delfino.main' found in sys.modules after import of package 'delfino', but prior to execution of 'delfino.main'; this may result in unpredictable behaviour::runpy"
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
show_column_numbers = true
show_error_codes = true
color_output = true
warn_unused_configs = true
warn_unused_ignores = true
follow_imports = "silent"

[[tool.mypy.overrides]]
# Source code dependencies
module = [
    "invoke.*",
    "pipenv.*",
    "shellingham.*",
]
ignore_missing_imports = true

[tool.pydocstyle]
convention = "pep257"
match = "^(?!test_)(.*)(?<!config_parser)\\.py$"
add-ignore = [
    # See http://www.pydocstyle.org/en/stable/error_codes.html
    "D1",  # Missing docstrings. We rely on code reviews. Names are often descriptive enough and don't need additional docstring.
    "D202",  # "No blank lines allowed after function docstring" is false positive caused by black formatter.
    "D204",  # "1 blank line required after class docstring"
    "D401",  # "First line should be in imperative mood"
    "D413",  # "Missing blank line after last section"
]

[tool.delfino]
reports_directory = "reports"
sources_directory = "src"
tests_directory = "tests"
test_types = ["unit", "integration"]
disable_commands = ["build-docker"]

#[tool.delfino.dockerhub]
#username = "radeklat"
#build_for_platforms = [
#    "linux/amd64",
#    "linux/arm64",
#    "linux/arm/v7",
#]
