[tool.poetry]
name = "delfino"
version = "1.1.0"
description = "A collection of command line helper scripts wrapping tools used during Python development."
authors = ["Radek Lát <radek.lat@gmail.com>"]
license = "MIT License"
readme = "README.md"
homepage = "https://github.com/radeklat/delfino"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
delfino = "delfino.main:main"
mike = "delfino.main:main"

[tool.poetry.dependencies]
python = "^3.7.2"
toml = "^0.10"
click = "^8.0"
pydantic = "^1.8"
deprecation ="^2.1"
importlib-metadata = {version = "*", python = "<3.10"}

[tool.poetry.extras]
completion = ["shellingham"]

[tool.poetry.group.dev.dependencies]
shellingham = "^1.4"
types-toml = "*"
delfino-core = {extras = ["verify-all", "dependencies-update"], version = "^3.9.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
# Setting compatible with black. See https://black.readthedocs.io/en/stable/compatible_configs.html
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = "tests/unit tests/integration"
python_functions = "should_*"
junit_family = "xunit2"

# Structure: https://docs.pytest.org/en/stable/warnings.html
# Values:    https://docs.python.org/3/library/warnings.html#describing-warning-filters
#            action:message:category:module:line
filterwarnings = [
    "ignore:'delfino.main' found in sys.modules after import of package 'delfino', but prior to execution of 'delfino.main'; this may result in unpredictable behaviour::runpy"
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
show_column_numbers = true
show_error_codes = true
color_output = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
follow_imports = "silent"

[[tool.mypy.overrides]]
# Source code dependencies
module = [
    "invoke.*",
    "pipenv.*",
    "shellingham.*",
    "setuptools.*",
    "deprecation.*",
]
ignore_missing_imports = true

[tool.pydocstyle]
convention = "pep257"
match = "^(?!test_)(.*)(?<!config_parser)\\.py$"
add-ignore = [
    # See http://www.pydocstyle.org/en/stable/error_codes.html
    "D1",  # Missing docstrings. We rely on code reviews. Names are often descriptive enough and don't need additional docstring.
    "D202",  # "No blank lines allowed after function docstring" is false positive caused by black formatter.
    "D204",  # "1 blank line required after class docstring"
    "D401",  # "First line should be in imperative mood"
    "D413",  # "Missing blank line after last section"
]

[tool.delfino]
reports_directory = "reports"
sources_directory = "src"
tests_directory = "tests"
test_types = ["unit", "integration"]

[tool.delfino.plugins.delfino-core]
disable_commands = ['build-docker']


#[tool.delfino.dockerhub]
#username = "radeklat"
#build_for_platforms = [
#    "linux/amd64",
#    "linux/arm64",
#    "linux/arm/v7",
#]
