[project]
name = "delfino"
version = "5.1.0"
description = "A collection of command line helper scripts wrapping tools used during Python development."
authors = [
    {name = "Radek Lát", email = "radek.lat@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
homepage = "https://github.com/radeklat/delfino"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
requires-python = ">=3.10.0"
dependencies = [
    "toml>=0.10",
    "click>=8.2.0",
    "pydantic>=2.0",
    "deprecation>=2.1",
]

[project.optional-dependencies]
completion = ["shellingham>=1.4"]

[project.scripts]
delfino = "delfino.main:main"
mike = "delfino.main:main"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "shellingham>=1.4",
    "types-toml",
    "delfino-core[verify,dependencies-update]>=9.0",
]

[tool.pytest.ini_options]
testpaths = "tests/unit tests/integration"
junit_family = "xunit2"

# Structure: https://docs.pytest.org/en/stable/warnings.html
# Values:    https://docs.python.org/3/library/warnings.html#describing-warning-filters
#            action:message:category:module:line
filterwarnings = [
    "ignore:'delfino.main' found in sys.modules after import of package 'delfino', but prior to execution of 'delfino.main'; this may result in unpredictable behaviour::runpy"
]

markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.mypy]
show_column_numbers = true
show_error_codes = true
color_output = true
warn_unused_configs = true
warn_unused_ignores = true
check_untyped_defs = true
follow_imports = "silent"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
# Source code dependencies
module = [
    "invoke.*",
    "pipenv.*",
    "shellingham.*",
    "setuptools.*",
    "deprecation.*",
]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "C90", # mccabe
    "D",   # pydocstyle
    "E",   # pycodestyle, errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # PEP8-naming
    "PL",  # Pylint
    "UP",  # pyupgrade
    "W",   # pycodestyle, warning
]
ignore = [
    # See https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "D1",  # Missing docstrings. We rely on code reviews. Names are often descriptive enough and don't need additional docstring.
    "D401",  # "First line should be in imperative mood"
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D102",  # missing-documentation-for-public-method
]

[tool.ruff.lint.pylint]
max-args = 6

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pep8-naming]
# Allow Pydantic's `@validator` decorator to trigger class method treatment.
classmethod-decorators = ["classmethod", "pydantic.field_validator"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.delfino.plugins.delfino-core]


#[tool.delfino.dockerhub]
#username = "radeklat"
#build_for_platforms = [
#    "linux/amd64",
#    "linux/arm64",
#    "linux/arm/v7",
#]
